--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <h2 class="text-4xl font-bold tracking-tight mb-8">My Learning at UChicago</h2>
             <div class="bg-card p-6 rounded-lg">
                 <p class="text-gray-400">
-                    This is where you can write about your specific courses, projects, and key takeaways from your Computer Science Master's program at the University of Chicago. You could talk about a challenging class, a new technology you've mastered, or a personal side project that has enhanced your skills.
+                    This is where I will write about your specific courses, projects, and key takeaways. 
                 </p>
                 <ul class="list-disc list-inside space-y-2 mt-4 text-gray-400">
                     <li>
@@ -144,18 +144,27 @@
             <h2 class="text-4xl font-bold tracking-tight mb-8">Books I'm Reading</h2>
             <div class="bg-card p-6 rounded-lg">
                 <p class="text-gray-400">
-                    Use this section to share your thoughts on books you're currently reading. You can list the title, author, and a brief review or key insight.
+                    Using this section to share your thoughts on books you're currently reading. You can list the title, author, and a brief review or key insight.
                 </p>
                 <div class="mt-4 space-y-4">
                     <div class="p-4 bg-gray-800 rounded-lg">
-                        <strong class="font-medium text-white">Title:</strong> The Hard Thing About Hard Things<br>
-                        <strong class="font-medium text-gray-300">Author:</strong> Ben Horowitz<br>
-                        <p class="text-sm mt-1 text-gray-400">A fantastic book on the challenges of running a business, filled with candid advice from a seasoned entrepreneur. It's a great read for anyone interested in product strategy and leadership.</p>
+                        <strong class="font-medium text-white">Title:</strong> Remarkably Bright Creatures<br>
+                        <strong class="font-medium text-gray-300">Author:</strong> Shelby Van Pelt<br>
+                        <p class="text-sm mt-1 text-gray-400">A grumpy octopus. A grieving woman. A small own full of second chances. Remarkably Bright Creatures didn't just tug at my heartstrings,
+                        It reconnected them. This book is about loneliness, memory, and unexpected friendships, all wrapped in the voice of one of the most unforgettable narrators I've ever met: Marcellus, 
+                        the octopus. Yes, an octopus. But more human than most. 
+                        What Shelby Van Pelt does here is magic: she brings to life the aching silences between people, and the strange beauty of being seen, really seen, when you least expect it. 
+                        It's not a loud book. It's a quiet, healing one. And sometimes, those are the ones we need the most. 
+                        If you've ever felt a little lost, a little alone, this book might find you.</p>
                     </div>
                     <div class="p-4 bg-gray-800 rounded-lg">
-                        <strong class="font-medium text-white">Title:</strong> Clean Code<br>
-                        <strong class="font-medium text-gray-300">Author:</strong> Robert C. Martin<br>
-                        <p class="text-sm mt-1 text-gray-400">A classic for any software engineer. It has completely changed the way I think about writing readable and maintainable code. A must-read.</p>
+                        <strong class="font-medium text-white">Title:</strong> Mrs Dalloway<br>
+                        <strong class="font-medium text-gray-300">Author:</strong> Virginia Woolf<br>
+                        <p class="text-sm mt-1 text-gray-400">Day in the life of Clarissa dalloway, upperclass housewife. Referred as “Mrs Dalloway” throughout the book to indicate that she is the property of her husband, Richard Dalloway. She can ask her servants to pick out flowers but the book opens with clarissa buying flowers for her party to indicate her independence, throwing parties represent Clarissa’s primary opportunity to assert her agency as an individual.
+
+Tone of modernism in the entire book. Narration of the book moves between characters, times, and places, which leads to numerous realities built by each individual perception. i.e. how the mind works 
+
+I could see internal parallels between Clarissa and Septimus, such as their emotional connections to Shakespeare, musings on death, and growing dissatisfaction with the expectations London society has for them.
                     </div>
                 </div>
             </div>
@@ -170,7 +179,7 @@
                 <a href="mailto:purnimapal11@uchicago.edu" class="hover:text-white transition-colors duration-200">Email</a>
             </div>
             <p class="mt-8 text-xs text-gray-500">
-                Purnima Pal | Last Updated: [Current Date]
+                Purnima Pal | Last Updated: 18 September 2025
             </p>
         </section>
     </main>
