--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <h2 class="text-4xl font-bold tracking-tight mb-8">Books I'm Reading</h2>
             <div class="bg-card p-6 rounded-lg">
                 <p class="text-gray-400">
-                    Using this section to share your thoughts on books you're currently reading. You can list the title, author, and a brief review or key insight.
+                    Using this section to share my thoughts on books I've read.
                 </p>
                 <div class="mt-4 space-y-4">
                     <div class="p-4 bg-gray-800 rounded-lg">
