Adding correct socials

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@ I could see internal parallels between Clarissa and Septimus, such as their emot
         <section id="contact" class="py-20 text-center">
             <h2 class="text-4xl font-bold tracking-tight mb-8">Let's Connect</h2>
             <div class="flex justify-center space-x-6 text-sm">
-                <a href="https://www.linkedin.com/in/purnimapal11/" target="_blank" class="hover:text-white transition-colors duration-200">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/purnimapal" target="_blank" class="hover:text-white transition-colors duration-200">LinkedIn</a>
                 <a href="https://github.com/purnimapal11" target="_blank" class="hover:text-white transition-colors duration-200">GitHub</a>
-                <a href="mailto:purnimapal11@uchicago.edu" class="hover:text-white transition-colors duration-200">Email</a>
+                <a href="mailto:palpurnima1112@gmail.com" class="hover:text-white transition-colors duration-200">Email</a>
             </div>
             <p class="mt-8 text-xs text-gray-500">
                 Purnima Pal | Last Updated: 18 September 2025
